[gd_scene load_steps=9 format=3 uid="uid://dhlqk44sylwe8"]

[ext_resource type="Script" path="res://Scripts/physicsMovement.gd" id="1_vlcj2"]
[ext_resource type="Texture2D" uid="uid://h5sk2ejx41t4" path="res://Assets/lightShapes/pixil-frame-0 - 2024-08-18T195620.126.png" id="2_jkt6t"]

[sub_resource type="Gradient" id="Gradient_eaw62"]
offsets = PackedFloat32Array(0.0130435, 1)
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 0)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_ue2c5"]
gradient = SubResource("Gradient_eaw62")

[sub_resource type="ParticleProcessMaterial" id="ParticleProcessMaterial_fyami"]
particle_flag_disable_z = true
spread = 0.0
flatness = 1.0
initial_velocity_min = 20.0
initial_velocity_max = 20.0
gravity = Vector3(0, 0, 0)
color_ramp = SubResource("GradientTexture1D_ue2c5")

[sub_resource type="PhysicsMaterial" id="PhysicsMaterial_3ut36"]
friction = 10.0

[sub_resource type="RectangleShape2D" id="RectangleShape2D_thn6c"]
size = Vector2(10, 10)

[sub_resource type="OccluderPolygon2D" id="OccluderPolygon2D_g0bpb"]
polygon = PackedVector2Array(-5, -5, -5, 5, 5, 5, 5, -5)

[node name="testingfade" type="Node2D"]

[node name="GPUParticles2D" type="GPUParticles2D" parent="."]
process_material = SubResource("ParticleProcessMaterial_fyami")
lifetime = 10.0

[node name="RigidBody2D" type="RigidBody2D" parent="."]
modulate = Color(0.41598, 0.41598, 0.41598, 1)
physics_material_override = SubResource("PhysicsMaterial_3ut36")
gravity_scale = 0.0
script = ExtResource("1_vlcj2")

[node name="CollisionShape2D2" type="CollisionShape2D" parent="RigidBody2D"]
shape = SubResource("RectangleShape2D_thn6c")

[node name="Sprite2D2" type="Sprite2D" parent="RigidBody2D"]
texture = ExtResource("2_jkt6t")

[node name="LightOccluder2D" type="LightOccluder2D" parent="RigidBody2D"]
occluder = SubResource("OccluderPolygon2D_g0bpb")

[node name="Camera2D" type="Camera2D" parent="."]

[node name="startFadeTimer" type="Timer" parent="."]

[node name="fadeIncrementTimer" type="Timer" parent="."]

[connection signal="timeout" from="startFadeTimer" to="RigidBody2D" method="_on_start_fade_timer_timeout"]
[connection signal="timeout" from="fadeIncrementTimer" to="RigidBody2D" method="_on_fade_increment_timer_timeout"]
